# MeterFlow-Fullstack

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  angular.json  blueprint.md  docker-compose.yml  entrypoint.sh  nginx.conf  package-lock.json  package.json  supervisord.conf  tsconfig.spec.json
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  import_supabase.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/meterflow/: config.py  database.py  dependencies.py  main.py
backend/src/meterflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/meterflow/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/meterflow/models/: __init__.py  base.py  co2_factor.py  meter.py  reading.py  refresh_token.py  user.py
backend/src/meterflow/repositories/: base.py  co2_factor.py  meter.py  reading.py
backend/src/meterflow/routers/: co2_factors.py  config.py  import_export.py  meters.py  readings.py  stats.py
backend/src/meterflow/schemas/: co2_factor.py  meter.py  reading.py  stats.py
backend/src/meterflow/services/: budget.py  co2.py  reading.py  stats.py  tariff.py
backend/src/meterflow/storage/: base.py  local.py  minio.py  null.py
backend/tests/: base_test.py  conftest.py
backend/tests/helpers/: auth_api.py  meter_api.py
backend/tests/integration/: test_auth.py  test_meters.py
backend/tests/unit/: test_tariff_service.py
e2e/: readings.spec.ts
frontend/: angular.json  ngsw-config.json  package.json  (+2 more)
(+170 files in other folders)
