[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meterflow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.8.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.0.0",
    "aiofiles>=24.1.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "allure-pytest>=2.13.5",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "RUF"]
ignore = [
    "B008",   # FastAPI Depends() in argument defaults — standard pattern
    "S101",   # assert in tests
    "E501",   # line too long — enforced by black/formatter
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--alluredir=allure-results -v"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/meterflow"]
omit = ["*/alembic/*"]
